# cogni-backend

./: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  fly.toml  pyproject.toml  pyrightconfig.json  render.yaml
.github/workflows/: deploy-staging.yml
app/: auth.py  config.py  main.py  main.py.backup
app/api/: __init__.py  base.py  billing.py  cogno.py  health.py  memory.py  note_ai_editor.py  notes.py  onboarding.py  organizations.py  push_notifications.py  stripe.py  tasks.py  users.py  webhooks.py
app/data/: __init__.py  mock_data.py
app/db/: __init__.py  base.py  session.py
app/db/models/: __init__.py  ai_notification.py  note.py  task.py  task_result.py  user_profile.py  workspace_member.py
app/features/: __init__.py
app/features/ai_notifications/: __init__.py  api.py  domain.py  repository.py  schemas.py  service.py
app/features/billing/: __init__.py  api.py  domain.py  schemas.py  service.py  webhook_service.py
app/infra/supabase/: __init__.py  client.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  ai_message.py  chat.py  note.py  notification.py  organization.py  push_notification.py  recurrence.py  task.py  task_result.py  thread.py  user.py  working_memory.py  workspace.py
app/services/: __init__.py  chat_service.py  notification_service.py  push_notification_service.py  subscription_seat_manager.py  task_service.py
app/services/ai_chat/: __init__.py  ai_chat_service.py  task_service.py
app/services/ai_task_executor/: __init__.py  completion_notification_service.py  executor_service.py
app/services/cogno/: __init__.py
app/services/file_processor/: __init__.py  file_processor.py
app/services/llm/: call_llm.py  message_builder.py
app/services/memory/: __init__.py  llm.py  memory_service.py  prompts.py  (+2 more)
app/utils/: __init__.py  datetime_helper.py  recurrence_calculator.py
(+100 files in other folders)
