[tool.poetry]
name = "cogni-backend"
version = "0.1.0"
description = ""
authors = ["Yusei Moriwaki <yusei.mo@icloud.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "*"
pandas = "*"
scikit-learn = "*"
xgboost = "*"
lightgbm = "*"
matplotlib = "*"
llama-index = "*"
langchain-core = "*"
langchain = "*"
openai = "*"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
supabase = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"