[tool.poetry]
name = "cogni-backend"
version = "0.1.0"
description = ""
authors = ["Yusei Moriwaki <yusei.mo@icloud.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "*"
pandas = "*"
scikit-learn = "*"
xgboost = "*"
lightgbm = "*"
matplotlib = "*"
llama-index = "*"
langchain-core = "*"
langchain = "*"
openai = "*"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
supabase = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"